# ai-genealogy-kit

./: .cz.toml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.local.example.md  CLAUDE.md  README.md  SQLITE_MIGRATION_STATUS.md  betty.yaml  mise.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: browser-researcher.md
.claude/hooks/: file-lock.sh  playwright-lock.sh
.claude/skills/: amsterdam-stadsarchief.md  cbg-familienamen.md  cbg-verzamelingen.md  delpher.md  erfgoed-leiden.md  erfgoed-s-hertogenbosch.md  erfgoedcentrum-zutphen.md  familysearch.md  fan-chart.md  gelders-archief.md  gemeentearchief-alphen.md  genealogie-online.md  hansknijff-com.md  harden-line.md  het-utrechts-archief.md  (+7 more)
docs/: RUNNER_IMPROVEMENTS.md  SQLITE_MIGRATION_PLAN.md
research/: DATASOURCE_CANDIDATES.md  DATA_SOURCES.md
scripts/: analyze_gedcom.py  ancestry.py  build_research_state.py  check_usage.sh  delpher_search.py  download-media.sh  example_verification.json  export-grampsweb.sh  fan_chart.py  fan_chart_comparison.py  fix-media-paths-api.py  gedcom_query.py  gedcom_to_betty.py  generate_verification.py  init_db.py  mais_search.py  memorix_search.py  migrate_gedcom.py  migrate_research.py  migrate_v2.py  model-comparison-test.sh  openarchieven_search.py  parse_session_log.py  parse_session_stream.py  research-runner.sh  research_db.py  schema.sql  session_state.py  sync-grampsweb.sh  sync_db_to_markdown.py  wiewaswie_search.py
tests/: conftest.py  test_ancestry.py  test_migrate_v2.py  test_negative_searches.py  test_parse_session_stream.py  test_session_state.py
(+75 files in other folders)
