[project]
name = "ai-genealogy-kit"
version = "0.15.0"
description = "AI-assisted genealogy research framework"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.commitizen]
version = "0.15.0"
version_provider = "commitizen"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
